escopo inicial do quiz

--- a/quiz-javascript/index.html
+++ b/quiz-javascript/index.html
@@ -9,10 +9,10 @@
     <!-- <script src="script.js"></script> -->
 
     <p id="pergunta">Aqui sera exibida a pergunta do quiz</p>
-    <button id="alternativaA">A</button>
-    <button id="alternativaB">B</button>
-    <button id="alternativaC">C</button>
-    <button id="alternativaD">D</button>
+    <button id="alternativaA" class="alternativa">A</button>
+    <button id="alternativaB" class="alternativa">B</button>
+    <button id="alternativaC" class="alternativa">C</button>
+    <button id="alternativaD" class="alternativa">D</button>
 
     <script src="script.js"></script>
 
