adiciona pontuacao no final do quiz

--- a/quiz-javascript/index.html
+++ b/quiz-javascript/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        .resposta-certa {
+            background-color: green;
+        }
+        .resposta-errada {
+            background-color: red;
+        }
+    </style>
     <!-- <script src="script.js"></script> -->
 
     <p id="pergunta">Aqui sera exibida a pergunta do quiz</p>
@@ -14,6 +22,7 @@
     <button id="alternativaC" class="alternativa">C</button>
     <button id="alternativaD" class="alternativa">D</button>
 
+    <p id="pontuacaoFinal"></p>
     <script src="script.js"></script>
 
 </body>
