adiciona lógica final do quiz

--- a/quiz-javascript/index.html
+++ b/quiz-javascript/index.html
@@ -23,7 +23,9 @@
     </div>
    
 
-    <!-- <p id="pontuacaoFinal"></p> -->
+    <div id="gabarito">
+        <h1>gabarito</h1>
+    </div>
     <script src="quiz.js"></script>
 
 </body>
