--- a/quiz-javascript/index.html
+++ b/quiz-javascript/index.html
@@ -8,25 +8,41 @@
 </head>
 <body>
 
+    <!-- Etapa 01 -->
     <div class="iniciar-quiz">
-        <p>Você está pronto para iniciar o quiz sobre Mitologia Grega?</p>
-        <button>SIM</button>
+        <h3>O Olimpo está observando...</h3>
+        <p>Mostre que você domina os segredos da Mitologia Grega. Responda com sabedoria e impressione os deuses!</p>
+        <button id="botao-comecar">Começar</button>
     </div>
 
+    <!-- Etapa 02 -->
     <div class="quiz">
-         <p id="pergunta">Aqui sera exibida a pergunta do quiz</p>
-        <button id="alternativaA" class="alternativa">A</button>
-        <button id="alternativaB" class="alternativa">B</button>
-        <button id="alternativaC" class="alternativa">C</button>
-        <button id="alternativaD" class="alternativa">D</button>
+        <div id="numero-questao">
+            <p>0</p>
+        </div>
+        <div class="secao-pergunta">
+            <p id="pergunta">Aqui sera exibida a pergunta do quiz</p>
+        </div>
+        <div class="secao-alternativas">
+            <button id="alternativaA" class="alternativa">A</button>
+            <button id="alternativaB" class="alternativa">B</button>
+            <button id="alternativaC" class="alternativa">C</button>
+            <button id="alternativaD" class="alternativa">D</button>
+        </div>
         <button disabled id="proxima-questao">Próxima</button>
     </div>
    
-
+    <!-- Etapa 03 -->
     <div id="gabarito">
-        <h1>gabarito</h1>
+        <h3>Sua pontuação foi: 0 / 0 </h3>
+        <p id="mensagem">Zeus está prestes a te expulsar do Olimpo</p>
+
+        <div class="respostas"></div>
+
+        <button>Recomeçar</button>
     </div>
     <script src="quiz.js"></script>
 
+    <p>&copy;Todos os direitos reservados.</p>
 </body>
 </html>
